--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -21,7 +21,7 @@
   }
   
   .square {
-    width: 100px;
+    width: 100px; 
     height: 100px;
     background-color: #444;
     border: none;
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 50%; 
     transition: background-color 0.3s;
   }
   
