--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -20,15 +20,15 @@
     gap: 10px;
   }
   
-  .square {
+    .square {
     width: 100px; 
     height: 100px;
-    background-color: #444;
+    background-color:white;
     border: none;
     font-size: 50px;
     font-weight: bold;
     cursor: pointer;
-    color: white;
+    color: #444;
     display: flex;
     align-items: center;
     justify-content: center;
